tags/2013-08-29_cppreference/Archive/4a5c6f08068dddb75ea336f525b4f94f-542192d2d8aca3c820c7acc656fa0c68/output
+ g++ -std=c++11 main.cpp
main.cpp: In function ‘int main()’:
main.cpp:13:15: error: no matching function for call to ‘bar(int*&)’
     foo::bar(p);
               ^
main.cpp:13:15: note: candidate is:
main.cpp:4:38: note: template<class T, int N> void foo::bar(T (&)[N])
     template<typename T, int N> void bar(T(&p)[N]) {
                                      ^
main.cpp:4:38: note:   template argument deduction/substitution failed:
main.cpp:13:15: note:   mismatched types ‘T [N]’ and ‘int*’
     foo::bar(p);
               ^
